GBR Nr added, styling overflow fixed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,3 +11,4 @@ h6 {
 .maxpagewidth{max-width:1400px;}
 .fullwidth{width:100%;}
 .nomargintop{margin-top:0px;}
+.overflow-hidden{overflow: hidden;}
